--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "mockery/mockery": ">=0.7.2"
     },
    "autoload": {
+        "classmap": [
+            "src/Rave.php"
+        ],
         "psr-4": {
           "KingFlamez\\Rave\\": "src/"
         }
@@ -32,7 +35,7 @@
             "KingFlamez\\Rave\\RaveServiceProvider"
         ],
         "aliases": {
-            "Rave": "KingFlamez\\Rave\\Rave"
+            "Rave": "KingFlamez\\Rave\\Facades\\Rave"
         }
     }
 }
