--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         }
     },
     "scripts": {
-        "tests": "vendor/bin/phpunit"
+        "tests": "vendor/bin/phpunit --coverage-clover=\"clover.xml\""
     },
     "extra": {
         "laravel": {
