--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^5.6.0|^7.0",
-        "illuminate/support": "5.*",
-        "mashape/unirest-php": "^3.0"
+        "php": "^5.6.0|^7.2",
+        "illuminate/support": "^5.0|^6.0",
+        "mashape/unirest-php": "^3.0|^4.0"
    },
    "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "scrutinizer/ocular": "~1.1",
-        "satooshi/php-coveralls": "^0.7.0",
-        "mockery/mockery": ">=0.7.2",
-        "orchestra/testbench": "~3.0"
+        "phpunit/phpunit" : "^8.3",
+        "scrutinizer/ocular": "^1.1",
+        "satooshi/php-coveralls": ">0.7",
+        "mockery/mockery": "^1.2",
+        "orchestra/testbench": "^4.0"
     },
     "autoload": {
         "classmap": [
