--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ composer.lock
 src/Rave3.php
 clover.xml
 .phpunit.result.cache
+pids
+logs
+node_modules
+npm-debug.log
+coverage/
+run
+dist
+.DS_Store
+.nyc_output
+.basement
+config.local.js
+basement_dist
