--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "https://github.com/kingflamez/laravelrave/Laravel Flutterwave Docs",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "license": "MIT",
   "devDependencies": {
