--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0"
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0"
    },
    "require-dev": {
         "phpunit/phpunit" : "^8.3",
         "scrutinizer/ocular": "^1.1",
         "satooshi/php-coveralls": ">0.7",
-        "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^4.0"
+        "mockery/mockery": ">1.2",
+        "orchestra/testbench": ">4.0"
     },
     "autoload": {
         "classmap": [
