--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.2|^8.0|^8.3",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|10.0"
    },
    "require-dev": {
-        "phpunit/phpunit" : "^8.3",
+        "phpunit/phpunit" : "^8.3|^9.0|^10.0",
         "scrutinizer/ocular": "^1.1",
         "satooshi/php-coveralls": ">0.7",
         "mockery/mockery": ">1.2",
