--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2|^8.0|^8.3",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0"
+        "php": ">=7.2",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
    },
    "require-dev": {
         "phpunit/phpunit" : "^8.3",
