--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "kingflamez/laravelrave",
-    "description": "A Laravel 5 Package for Flutterwave Rave",
+    "description": "A Laravel Package for Flutterwave Rave",
     "keywords": ["php","github", "laravel","Open Source","payments", "kingflamez", "Flutterwave Rave", "Flutterwave", "rave", "ravepay.co","laravel 5"],
     "license": "MIT",
     "authors": [
@@ -12,12 +12,11 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.2|^8.0|^8.3",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
    },
    "require-dev": {
-        "phpunit/phpunit" : "^8.3",
-        "scrutinizer/ocular": "^1.1",
-        "satooshi/php-coveralls": ">0.7",
+        "phpunit/phpunit" : "^10",
+        "php-coveralls/php-coveralls": "^2.6.0",
         "mockery/mockery": ">1.2",
         "orchestra/testbench": ">4.0"
     },
