--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,19 @@
 {
     "name": "kingflamez/laravelrave",
     "description": "A Laravel Package for Flutterwave Rave",
-    "keywords": ["php","github", "laravel","Open Source","payments", "kingflamez", "Flutterwave Rave", "Flutterwave", "rave", "ravepay.co","laravel 5"],
+    "keywords": [
+        "php",
+        "github",
+        "laravel",
+        "Open Source",
+        "payments",
+        "kingflamez",
+        "Flutterwave Rave",
+        "Flutterwave",
+        "rave",
+        "ravepay.co",
+        "laravel 5"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -12,10 +24,10 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.2|^8.0|^8.3",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
-   },
-   "require-dev": {
-        "phpunit/phpunit" : "^10",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10",
         "php-coveralls/php-coveralls": "^2.6.0",
         "mockery/mockery": ">1.2",
         "orchestra/testbench": ">4.0"
@@ -25,7 +37,7 @@
             "src/Rave.php"
         ],
         "psr-4": {
-          "KingFlamez\\Rave\\": "src/"
+            "KingFlamez\\Rave\\": "src/"
         }
     },
     "autoload-dev": {
